--- a/code_implementation/cartpole.ipynb
+++ b/code_implementation/cartpole.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from lib import train_linear_q, evaluate_policy, QNetwork, DQN_Trainer\n",
+    "from lib import train_linear_q, evaluate_policy, CartpoleQNetwork, DQN_Trainer\n",
     "import gymnasium as gym\n",
     "\n",
     "print(\"===== DQN Training =====\")\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,8 +77,8 @@
     }
    ],
    "source": [
-    "policy_net = QNetwork(state_dim, action_dim, hidden_dim=128)\n",
-    "target_net = QNetwork(state_dim, action_dim, hidden_dim=128)\n",
+    "policy_net = CartpoleQNetwork(state_dim, action_dim, hidden_dim=128)\n",
+    "target_net = CartpoleQNetwork(state_dim, action_dim, hidden_dim=128)\n",
     "dqn_trainer = DQN_Trainer(env=env, policy_net=policy_net, target_net=target_net, device='mps')\n",
     "dqn_rewards = dqn_trainer.dqn(\n",
     "    num_episodes=1000,\n",
@@ -126,7 +126,7 @@
     "import os\n",
     "# 학습된 DQN 모델 평가 및 렌더링 (실제 창이 뜨며 CartPole이 움직이는 것을 볼 수 있습니다)\n",
     "print(\"===== DQN Evaluation =====\")\n",
-    "policy_net = QNetwork(state_dim, action_dim, hidden_dim=128)\n",
+    "policy_net = CartpoleQNetwork(state_dim, action_dim, hidden_dim=128)\n",
     "path = \"20250212-2242/850.pth\"\n",
     "dir, num_episode = os.path.split(path)\n",
     "num_episode=num_episode.split(\".\")[0]\n",
@@ -160,7 +160,7 @@
     "\n",
     "# 학습된 선형 모델 평가 및 렌더링\n",
     "print(\"===== Linear Q-learning Evaluation =====\")\n",
-    "eval_rewards_linear = evaluate_policy(linear_model, n_episodes=3, render=True)\n",
+    "eval_rewards_linear = evaluate_policy(env, linear_model, n_episodes=3, render=True)\n",
     "print(\"Linear Q-learning Evaluation Rewards:\", eval_rewards_linear)"
    ]
   },
